[OS/2] Bug 403989: fix file saving issues by backing out OS/2 part of patch from bug 402460, r=mkaply